fixed style for images so they can't be bigger then the markdown window itself (and added a way to align them).

--- a/public/style.css
+++ b/public/style.css
@@ -579,6 +579,24 @@ div.markdown div.footnotes ol {
     list-style-type: decimal;
 }
 
+div.markdown img {
+    max-width: 100%;
+}
+
+div.markdown img[alt$="full-width"] {
+    width: 100%;
+}
+
+div.markdown img[alt$="align-left"] {
+    float: left;
+    margin-right: 0.4rem;
+}
+
+div.markdown img[alt$="align-right"] {
+    float: right;
+    margin-left: 0.4rem;
+}
+
 /*
 div.markdown strong {
 
